timeout bl implementation, without specs yet.
